--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>This is the first commit code</h1>
     <h1>This is the second commit code</h1>
+    <h1>This is the third commit code</h1>
 </body>
 </html>
