--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>This is the first commit code</h1>
     <h1>This is the second commit code</h1>
     <p>This is another commit</p>
+    <p>Commit from another developer</p>
 </body>
 </html>
