--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <h1>This is the second commit code</h1>
     <p>This is another commit</p>
     <p>Commit from another developer</p>
+    <section>
+        <h1>A new feature</h1>
+    </section>
 </body>
 </html>
