--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
     <section>
         <h1>A new feature</h1>
     </section>
+
+    <section>
+        <h1>Another new feature</h1>
+    </section>
 </body>
 </html>
